using UnityEngine;

namespace World.Agents
{
    public class WorldObject: MonoBehaviour
    {
        private Environment.World position;
    }
}